add external css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head> 
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title> Titolone  </title>
+    <title> 
+        Titolone  
+    </title>
     <meta charset="UTF-8">
     <meta name="description" content="Qui ci vanno le info sulla mia pagina">
     <meta name="autore" content="Warlo">
@@ -11,17 +14,39 @@
 
   <body> 
 
-    <h1> Benvenuti nella <em> mia </em> pagina! </h1>
-    <h2> io sono <a href="https://www.mondadoristore.it/Il-padrone-del-mondo-Robert-Hugh-Benson/eai978886409915/"> Carlo Poggi </a>   </h2>
-    <h3> questo è il mio primo sito </h3>
-    <h4> (non sono ancora molto bravo eh) </h4>
-   
-    <p> non so manco <b> bene </b> cosa scriverci... </p>
+  <div> 
+    primo
+      <div>
+       secondo
+        <div>
+          terzo
+        </div>
+      </div>
+  </div>
 
-    
+    <h1> 
+        Benvenuti nella <em> mia </em> pagina! 
+    </h1>
+    <h2> 
+        io sono 
+        <a href="https://www.mondadoristore.it/Il-padrone-del-mondo-Robert-Hugh-Benson/eai978886409915/"> 
+            Carlo Poggi 
+        </a>  
+    </h2>
+    <h3> 
+        questo è il mio primo sito 
+    </h3>
+    <h4> 
+        (non sono ancora molto bravo eh)
+    </h4>
+    <p> 
+        non so manco <b> bene </b> cosa scriverci... 
+    </p>
 
-    <img src="caniolino.jpg" alt="un cane che ti manda a fanculo" 
-    height="400" width="350">
+    <img 
+        src="caniolino.jpg" 
+        alt="un cane che ti manda a fare un giro" 
+        height="400" width="350">
 
     <ol>
       <li> oggetto </li>
