--- a/index.html
+++ b/index.html
@@ -14,14 +14,21 @@
 
   <body> 
 
-  <div> 
-    primo
-      <div>
-       secondo
-        <div>
-          terzo
-        </div>
-      </div>
+  <div class="wrapper">
+     <div class= 'container'>
+       <span> 
+         X 
+       </span>
+       <div>
+         primo
+       </div>
+       <div>
+         secondo
+       </div>
+       <div>
+         terzo
+       </div>
+     </div>
   </div>
 
     <h1> 
@@ -43,10 +50,7 @@
         non so manco <b> bene </b> cosa scriverci... 
     </p>
 
-    <img 
-        src="caniolino.jpg" 
-        alt="un cane che ti manda a fare un giro" 
-        height="400" width="350">
+    
 
     <ol>
       <li> oggetto </li>
