--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <body> 
 
-  <div class="wrapper">
-     <div class= 'container'>
+  <div class='wrapper'>
+     <div class='container'>
        <span> 
          X 
        </span>
