--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <button type="button" onclick="alert('DRIN DRIN')">Pigiami!</button>
 
-    <table border=2 cellpadding=4> 
+    <table order=2 cellpadding=4> 
       <caption> <b> cose importantissime </b> </caption>
       <thead> 
         <tr> 
