--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,7 @@
     </body>
     </div>
     <script src="./store.js"></script>
+    <script src="./components/cart-total.js"></script>
     <script src="./components/cart-item.js"></script>
     <script src="./components/shop-item.js"></script>
     <script src="./components/cart-list.js"></script>
